--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,6 +38,15 @@ body {
   text-decoration: none;
 }
 
+.main-navigation a:hover,
+.main-navigation a:focus {
+  color: rgb(238, 147, 0);
+}
+
+.main-navigation a.active {
+  color: rgb(238, 147, 0);
+}
+
 .shop-navigation {
   display: flex;
 }
@@ -54,19 +63,20 @@ body {
 /* Home Page Products */
 .product-list {
   width: 80%;
+  max-width: 83rem;
   margin: 2rem auto 0;
   display: flex;
   justify-content: center;
-}
-
-.product-list > .product + .product {
-  margin-left: 2rem;
+  gap: 3rem;
+  flex-wrap: wrap;
 }
 
 .product {
   max-width: 350px;
   background-color: #fff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  display: flex;
+  flex-direction: column;
 }
 
 .product__header,
@@ -83,5 +93,58 @@ body {
 }
 
 .product-image__container img {
-  object-fit: contain;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.product form {
+  padding: 1em 0;
+  display: flex;
+  justify-content: center;
+  margin-top: auto;
+}
+
+.btn {
+  font-size: 1.1rem;
+  border: none;
+  cursor: pointer;
+  padding: 0.75em 1.5em;
+}
+
+.btn.btn-add-cart {
+  background: #093c7e;
+  color: #fff;
+  border: 1px solid #093c7e;
+  transition: background 0.3s;
+}
+
+.btn:hover {
+  background: #fff;
+  color: #093c7e;
+}
+
+/* Cart */
+.cart {
+  width: 80%;
+  max-width: 70rem;
+  margin: 2rem auto 0;
+}
+
+.cart > .cart-item + .cart-item {
+  margin-top: 2.5rem;
+}
+
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 3rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+}
+
+.btn.btn-delete {
+  background: #ff0000;
+  color: #fff;
+  font-weight: 900;
 }
