--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,7 +63,7 @@ body {
 /* Home Page Products */
 .product-list {
   width: 80%;
-  max-width: 83rem;
+  max-width: 75rem;
   margin: 2rem auto 0;
   display: flex;
   justify-content: center;
@@ -72,7 +72,7 @@ body {
 }
 
 .product {
-  max-width: 350px;
+  width: 350px;
   background-color: #fff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   display: flex;
@@ -95,7 +95,7 @@ body {
 .product-image__container img {
   width: 100%;
   height: 250px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .product form {
@@ -143,8 +143,80 @@ body {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
 
+.cart-actions {
+  display: flex;
+}
+
+.cart-actions > form + form {
+  margin-left: 1rem;
+}
+
+.btn.btn-decrease {
+  background: rgb(158, 158, 0);
+  font-weight: 900;
+  color: #fff;
+}
+
+.btn.btn-increase {
+  background: green;
+  font-weight: 900;
+  color: #fff;
+}
+
 .btn.btn-delete {
   background: #ff0000;
   color: #fff;
   font-weight: 900;
+}
+
+/* Admin Books */
+.actions {
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btn.btn-edit {
+  background: #093c7e;
+  color: #fff;
+  text-decoration: none;
+}
+
+/* Add Book */
+.add-book {
+  width: 80%;
+  max-width: 30rem;
+  margin: 2rem auto 0;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  padding: 2em;
+}
+
+.add-book input {
+  padding: 0.5em 1em;
+  margin-top: 0.5em;
+  margin-bottom: 2em;
+}
+
+.add-book textarea {
+  margin-top: 0.5em;
+  resize: none;
+  padding: 0.5em 1em;
+}
+
+.add-book .btn.btn-add {
+  margin-top: 1em;
+  background: #02df02;
+  color: #000;
+  border: 2px solid #02df02;
+  transition: background 0.3s;
+  align-self: center;
+}
+
+.add-book .btn.btn-add:hover,
+.add-book .btn.btn-add:focus {
+  background: #fff;
+  color: #000;
 }
