--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -3,7 +3,7 @@
         <ul class="shop-navigation">
             <li><a href="/" class="<%= path === "/" ? "active" : "" %>">Store</a></li>
             <li><a href="/cart" class="<%= path === "/cart" ? "active" : "" %>">Cart</a></li>
-            <li><a href="/orders">Orders</a></li>
+            <li><a href="/order" class="<%= path === "/order" ? "active" : "" %>">Orders</a></li>
             <li><a href="/admin/books" class="<%= path === "/admin/books" ? "active" : "" %>">Admin Books</a></li>
             <li><a href="/admin/add-book" class="<%= path === "/admin/add-book" ? "active" : "" %>">Add Book</a></li>
             <li><a href="#">Admin Users</a></li>
