--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -6,7 +6,7 @@
             <li><a href="/order" class="<%= path === "/order" ? "active" : "" %>">Orders</a></li>
             <li><a href="/admin/books" class="<%= path === "/admin/books" ? "active" : "" %>">Admin Books</a></li>
             <li><a href="/admin/add-book" class="<%= path === "/admin/add-book" ? "active" : "" %>">Add Book</a></li>
-            <li><a href="#">Admin Users</a></li>
+            <li><a href="/admin/users" class="<%= path === "/admin/users" ? "active" : "" %>">Admin Users</a></li>
         </ul>
 
         <ul class="auth-navigation">
