--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -26,7 +26,7 @@
                     </div>
                 </li>
             <% }) %>
-            <form action="/order" method="POST">
+            <form class="cart-form" action="/order" method="POST">
                 <input type="hidden" name="userId" value="<%= userId %>">
                 <button class="btn btn-order">Order Books</button>
             </form>
