--- a/views/shop/order.ejs
+++ b/views/shop/order.ejs
@@ -8,7 +8,7 @@
             <% } else { %>
                 <% orders.forEach((order) => { %>
                 <li class="order">
-                    <h4 class="order-title"><span style="font-weight: bold;">Order:</span>1234123412512434231</h4>
+                    <h4 class="order-title"><span style="font-weight: bold;">Order:</span><%= order._id %></h4>
                     <div class="order-items">
                     <% order.items.forEach((item)=> { %>
                         <div class="order-item">
