--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -9,8 +9,8 @@
                 <p class="user-username"><%= user.username %></p>
                 <div class="user-list__actions">
                     <a href="/admin/orders?userId=<%= user._id %>" class="btn btn-order">Orders</a>
-                    <a href="####" class="btn btn-edit">Edit</a>
-                    <form action="/admin/delete-user">
+                    <a href="/admin/edit-user?userId=<%= user._id %>" class="btn btn-edit">Edit</a>
+                    <form action="/admin/delete-user" method="post">
                         <input type="hidden" name="userId" value="<%= user._id %>">
                         <button type="submit" class="btn btn-delete">Delete</button>
                     </form>
